[gd_scene load_steps=46 format=2]

[ext_resource path="res://05b.png" type="Texture" id=1]
[ext_resource path="res://MAG.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts And Presets/Battle Text.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/SmallDragon.tres" type="Resource" id=4]
[ext_resource path="res://Fonts And Presets/BBOX.tres" type="StyleBox" id=5]
[ext_resource path="res://Scripts/Battle.gd" type="Script" id=6]
[ext_resource path="res://Map Background.png" type="Texture" id=7]
[ext_resource path="res://Audio/Bite.mp3" type="AudioStream" id=8]
[ext_resource path="res://Animações/Shake.tres" type="Animation" id=9]
[ext_resource path="res://Animações/Unpoison.tres" type="Animation" id=10]
[ext_resource path="res://Animações/PlayerPoison.tres" type="Animation" id=11]
[ext_resource path="res://Animações/EnemyDefeated.tres" type="Animation" id=12]
[ext_resource path="res://Animações/MiniShake.tres" type="Animation" id=13]
[ext_resource path="res://Animações/Poisoned.tres" type="Animation" id=14]
[ext_resource path="res://Animações/Slowed.tres" type="Animation" id=15]
[ext_resource path="res://AttackBuff.tres" type="Animation" id=16]
[ext_resource path="res://Animações/Angry.tres" type="Animation" id=17]
[ext_resource path="res://Defending.tres" type="Animation" id=18]
[ext_resource path="res://healed.tres" type="SpriteFrames" id=19]
[ext_resource path="res://Animações/enemy_damaged.tres" type="Animation" id=20]
[ext_resource path="res://Audio/Click.ogg" type="AudioStream" id=21]
[ext_resource path="res://Audio/Explosion__004.wav" type="AudioStream" id=22]
[ext_resource path="res://Audio/Hidden Power.mp3" type="AudioStream" id=23]
[ext_resource path="res://Audio/X2Download.com-Donkey Kong Country - Stage Clear-(128kbps).ogg" type="AudioStream" id=24]
[ext_resource path="res://Blinded PNG.png" type="Texture" id=25]
[ext_resource path="res://Audio/Stat Fall.mp3" type="AudioStream" id=26]
[ext_resource path="res://Audio/Poison Sting.mp3" type="AudioStream" id=27]
[ext_resource path="res://Audio/Toxic.mp3" type="AudioStream" id=28]
[ext_resource path="res://Audio/Heal Pulse.mp3" type="AudioStream" id=29]
[ext_resource path="res://Audio/Crush Claw.mp3" type="AudioStream" id=30]
[ext_resource path="res://Audio/Safeguard.mp3" type="AudioStream" id=31]
[ext_resource path="res://Audio/Poison Powder.mp3" type="AudioStream" id=32]
[ext_resource path="res://Skeleton PNG.png" type="Texture" id=33]
[ext_resource path="res://Audio/X2Download.com-Action 16-bit Chiptune _ Background Music for Games _ Jungle Act-(128kbps).ogg" type="AudioStream" id=34]
[ext_resource path="res://Audio/Hit Normal Damage.mp3" type="AudioStream" id=35]
[ext_resource path="res://Audio/Hit Super Effective.mp3" type="AudioStream" id=36]
[ext_resource path="res://Fonts And Presets/boxcolor.tres" type="StyleBox" id=37]

[sub_resource type="Theme" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 1, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.705882, 0.0666667, 0.0666667, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.698039 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0745098, 0.454902, 0.0352941, 1 )

[sub_resource type="Animation" id=9]
resource_name = "Healed"

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyCont/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15, -18 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerPanel/PlayerData:material")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("healed:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.305882, 0.305882, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlayerPanel:custom_styles/panel:bg_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.819608 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PlayerPanel:custom_styles/panel")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 5 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("PlayerPanel/PlayerData/ProgressBar:custom_styles/fg:bg_color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 1, 0, 1 ) ]
}

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
enemy = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -28.0
margin_top = -38.0
margin_right = 1072.0
margin_bottom = 628.0
rect_pivot_offset = Vector2( -73, 299 )
theme = SubResource( 10 )
texture = ExtResource( 7 )
expand = true

[node name="EnemyCont" type="VBoxContainer" parent="."]
anchor_left = 0.500488
anchor_top = 0.416667
anchor_right = 0.500488
anchor_bottom = 0.423333
margin_left = -88.5
margin_top = -85.0
margin_right = 88.5
margin_bottom = 85.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProgressBar" type="ProgressBar" parent="EnemyCont"]
margin_right = 177.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 9, -82 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="EnemyCont/ProgressBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.5
margin_top = -12.0
margin_right = 56.5
margin_bottom = 12.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="Enemy" type="TextureRect" parent="EnemyCont"]
margin_top = 45.0
margin_right = 177.0
margin_bottom = 173.0
rect_pivot_offset = Vector2( -646, 546 )
texture = ExtResource( 1 )
stretch_mode = 4

[node name="PlayerPanel" type="Panel" parent="."]
light_mask = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -179.0
margin_right = 2.0
custom_styles/panel = SubResource( 11 )

[node name="Poisoned2" type="TextureRect" parent="PlayerPanel"]
visible = false
margin_left = 725.0
margin_top = -2.0
margin_right = 1453.0
margin_bottom = 506.0
rect_scale = Vector2( 0.11237, 0.0987193 )
texture = ExtResource( 33 )

[node name="Actions" type="HBoxContainer" parent="PlayerPanel"]
margin_left = 49.0
margin_top = 53.0
margin_right = 976.0
margin_bottom = 157.0
custom_constants/separation = 5

[node name="Action" type="Button" parent="PlayerPanel/Actions"]
margin_right = 305.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( -220, -77 )
focus_neighbour_left = NodePath("../Run")
focus_neighbour_right = NodePath("../Guard")
focus_next = NodePath("../Guard")
focus_previous = NodePath("../Run")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
action_mode = 0
text = "Action"

[node name="Guard" type="Button" parent="PlayerPanel/Actions"]
margin_left = 310.0
margin_right = 616.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( -220, -77 )
focus_neighbour_left = NodePath("../Action")
focus_neighbour_right = NodePath("../Run")
focus_next = NodePath("../Run")
focus_previous = NodePath("../Action")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Guard"

[node name="Run" type="Button" parent="PlayerPanel/Actions"]
margin_left = 621.0
margin_right = 927.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( -220, -77 )
focus_neighbour_left = NodePath("../Guard")
focus_neighbour_right = NodePath("../Action")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Run"

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -307.0
margin_top = -82.5
margin_right = 213.0
margin_bottom = -43.5
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_top = 7.0
margin_right = 103.0
margin_bottom = 31.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "PLAYER: "

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 107.0
margin_right = 520.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 9, -82 )
size_flags_horizontal = 11
size_flags_vertical = 9
size_flags_stretch_ratio = 1.05
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.5
margin_top = -12.0
margin_right = 56.5
margin_bottom = 12.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="ActionSelect" type="HBoxContainer" parent="PlayerPanel"]
visible = false
margin_left = 48.0
margin_top = 53.0
margin_right = 983.0
margin_bottom = 155.0

[node name="Attack" type="Button" parent="PlayerPanel/ActionSelect"]
margin_right = 309.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( -220, -77 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Attack"

[node name="Potions" type="Button" parent="PlayerPanel/ActionSelect"]
margin_left = 313.0
margin_right = 622.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( -220, -77 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Potions"

[node name="Return" type="Button" parent="PlayerPanel/ActionSelect"]
margin_left = 626.0
margin_right = 935.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( -220, -77 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Return"

[node name="Potions" type="HBoxContainer" parent="PlayerPanel"]
visible = false
margin_left = 18.0
margin_top = 58.0
margin_right = 1026.0
margin_bottom = 150.0

[node name="Potion2" type="Button" parent="PlayerPanel/Potions"]
margin_right = 175.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -775, -231 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.0392157, 1, 0.0313726, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Healing Potion"

[node name="Potion" type="Button" parent="PlayerPanel/Potions"]
margin_left = 179.0
margin_right = 341.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -775, -231 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0.917647, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Poison Potion"

[node name="Potion3" type="Button" parent="PlayerPanel/Potions"]
margin_left = 345.0
margin_right = 543.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -775, -231 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.00784314, 0.309804, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Blindness Potion"

[node name="Potion4" type="Button" parent="PlayerPanel/Potions"]
margin_left = 547.0
margin_right = 729.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -775, -231 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Strengh Potion"

[node name="Potion5" type="Button" parent="PlayerPanel/Potions"]
margin_left = 733.0
margin_right = 915.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -775, -231 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 1, 0.937255, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Defense Potion"

[node name="Return2" type="Button" parent="PlayerPanel/Potions"]
margin_left = 919.0
margin_right = 1008.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -220, -77 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 5
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 37 )
custom_styles/pressed = ExtResource( 37 )
custom_styles/focus = ExtResource( 37 )
custom_styles/normal = SubResource( 5 )
text = "Return"

[node name="TextBox" type="Panel" parent="."]
visible = false
margin_left = 3.0
margin_top = 430.0
margin_right = 1019.0
margin_bottom = 577.0
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = 9.0
margin_bottom = -3.0
custom_fonts/font = ExtResource( 3 )
text = "A criatura selvagem me viu..., o que devo fazer?"

[node name="Tick" type="Label" parent="TextBox"]
margin_left = 971.0
margin_top = 115.0
margin_right = 1011.0
margin_bottom = 149.0
custom_fonts/font = ExtResource( 3 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
method_call_mode = 1
anims/Angry = ExtResource( 17 )
anims/AttackBuff = ExtResource( 16 )
anims/Defending = ExtResource( 18 )
anims/EnemyDefeated = ExtResource( 12 )
anims/Healed = SubResource( 9 )
anims/MiniShake = ExtResource( 13 )
"anims/Nova Animação" = ExtResource( 10 )
anims/PlayerPoison = ExtResource( 11 )
anims/Poisoned = ExtResource( 14 )
anims/RESET = SubResource( 8 )
anims/Shake = ExtResource( 9 )
anims/Slowed = ExtResource( 15 )
anims/enemy_damaged = ExtResource( 20 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="healed" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 0.305882, 0.305882, 1 )
position = Vector2( 510, 254 )
scale = Vector2( 1, 0.914063 )
frames = ExtResource( 19 )
animation = "Healed"
frame = 2

[node name="Poisoned" type="TextureRect" parent="."]
visible = false
margin_left = 470.0
margin_top = 115.0
margin_right = 1198.0
margin_bottom = 623.0
rect_scale = Vector2( 0.11237, 0.0987193 )
texture = ExtResource( 33 )

[node name="Blinded" type="TextureRect" parent="."]
visible = false
margin_left = 426.0
margin_top = 123.0
margin_right = 776.0
margin_bottom = 312.0
rect_scale = Vector2( 0.162805, 0.179877 )
texture = ExtResource( 25 )

[node name="BattleTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )
volume_db = -19.328
autoplay = true

[node name="ButtonSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -10.124

[node name="Strike" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 35 )
volume_db = -20.248

[node name="EnemyStrike" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -13.833

[node name="PowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -12.885

[node name="EnhancedStrike" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 36 )
volume_db = -11.988

[node name="PoisonPotion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 32 )
volume_db = -14.879

[node name="PoisonEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
volume_db = -19.015

[node name="Heal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
volume_db = -19.629
mix_target = 1

[node name="EnemyClaw" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )
volume_db = -10.272

[node name="DefensePotion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )
volume_db = -13.805

[node name="Bite" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -11.035

[node name="YouWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -9.31

[node name="Blindpot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -14.597

[node name="PoisonStrike" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[connection signal="pressed" from="PlayerPanel/Actions/Action" to="." method="_on_Action_pressed"]
[connection signal="pressed" from="PlayerPanel/Actions/Guard" to="." method="_on_Guard_pressed"]
[connection signal="pressed" from="PlayerPanel/Actions/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="PlayerPanel/ActionSelect/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="PlayerPanel/ActionSelect/Potions" to="." method="_on_Potions_pressed"]
[connection signal="pressed" from="PlayerPanel/ActionSelect/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="PlayerPanel/Potions/Potion2" to="." method="_on_Potion2_pressed"]
[connection signal="pressed" from="PlayerPanel/Potions/Potion" to="." method="_on_Potion_pressed"]
[connection signal="pressed" from="PlayerPanel/Potions/Potion3" to="." method="_on_Potion3_pressed"]
[connection signal="pressed" from="PlayerPanel/Potions/Potion4" to="." method="_on_Potion4_pressed"]
[connection signal="pressed" from="PlayerPanel/Potions/Potion5" to="." method="_on_Potion5_pressed"]
[connection signal="pressed" from="PlayerPanel/Potions/Return2" to="." method="_on_Return2_pressed"]
